--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -68,3 +68,14 @@ sys_open()中实现挂接。
 ## 3.3 获取文件i节点
 
 主要根据文件路径名找到文件i节点。
+这次找i节点和前面找i节点过程不一致，因为这次文件是存储在硬盘中。查找过程如下：
+寻找i节点->通过i节点找到目录文件->
+通过目录文件找到目录项->通过目录项找到目录文件i节点号->
+通过目录文件找到目录项->通过目录项找到目录文件i节点号->
+...
+循环下去，最终找到hello.txt文件
+![2019-08-21-14-24-59.png](./images/2019-08-21-14-24-59.png)
+
+### 3.3.1 获取目录文件i节点
+* 进入open_namei()函数后，先对用户所要打开文件设置参数mode、flag，执行代码如下。
+
