--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/分析日志.md
+++ b/linux kernal/cdos/ProcKill分析记录/分析日志.md
@@ -32,3 +32,10 @@ dev@dev:~/ProcKiller$ ldd prockiller.exe
 没法使用，spy++主要是对消息动作的一种端点行为。我们的错误是一种启动错误，没法使用。
 
 ### 2.2.2 API Monitor
+这个页没法使用，启动问题
+
+
+# 3. 查看如何内建加载dll
+LdrInitializeThunk() 加载dll（漫谈兼容内核7）
+
+
