--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/分析日志.md
+++ b/linux kernal/cdos/ProcKill分析记录/分析日志.md
@@ -37,5 +37,11 @@ dev@dev:~/ProcKiller$ ldd prockiller.exe
 
 # 3. 查看如何内建加载dll
 LdrInitializeThunk() 加载dll（漫谈兼容内核7）
+查阅后发现没什么问题.wine重写dll库命名都是非常规整的。加载也是对应好的路径
 
+# 4. 发现wine没有重写MFC42.dll这个库
+查阅文档后，并没有发现wine重新实现这些库。
+
+# 5. 结论
+只能进行配置文件修复。
 
