--- Auto-Git Commit ---

--- a/常用语言/C++/C++ Template/初探函数模板.md
+++ b/常用语言/C++/C++ Template/初探函数模板.md
@@ -29,4 +29,13 @@ int main(){
 s
 * 可以说模板有两次编译过程
     * 模板展开之前：检查模板本身代码语法是否正确（宏展开做不到的）
-    * 宏展开之后: 检查模板代码调用是否有效，比如shisdafa
+    * 宏展开之后: 检查模板代码调用是否有效，比如实例化类型不支持函数调用
+
+## 2.3 模板参数匹配
+* 默认模板类型必须强制匹配
+    * 比如上面调用max(4,4.2)就会出现错误
+
+* 处理上面错误有三种方法:
+    * 对实参进行强制转换，使之类型匹配max(static_cast<double>(4),4.2)  （使用float(4)这种方式进行强制转换类型也是可以的，强制转化在编译期间就能完成）
+    * 显示指定（或者限定）T的类型 max<double>(4,4.2)
+    * 指定两个参数可以具有不同类型
