--- Auto-Git Commit ---

--- a/常用语言/C++/C++ Template/初探函数模板.md
+++ b/常用语言/C++/C++ Template/初探函数模板.md
@@ -38,4 +38,16 @@ s
 * 处理上面错误有三种方法:
     * 对实参进行强制转换，使之类型匹配max(static_cast<double>(4),4.2)  （使用float(4)这种方式进行强制转换类型也是可以的，强制转化在编译期间就能完成）
     * 显示指定（或者限定）T的类型 max<double>(4,4.2)
-    * 指定两个参数可以具有不同类型
+    * 指定两个参数可以具有不同类型.
+        ```
+        template <typename T1, typename T2>
+        T2 t_max(T1 const& a,T2 const& b){
+        return a>b?a:b;
+        }
+        ```
+        * 缺点：
+            * 返回类型必须强制指定，不能动态指定返回类型（可以使用ticky 模板编程来实现这些特性）
+            * 返回类型不能是引用。因为返回的a，b是两种类型，如果返回是a，则会将int 转化成局部对象float。引用是不可能指向函数内部变量的。
+
+## 2.4 重载模板函数
+
