--- Auto-Git Commit ---

--- a/常用语言/C++/C++ Template/第一章 初探函数模板.md
+++ b/常用语言/C++/C++ Template/第一章 初探函数模板.md
@@ -50,4 +50,38 @@ s
             * 返回类型不能是引用。因为返回的a，b是两种类型，如果返回是a，则会将int 转化成局部对象float。引用是不可能指向函数内部变量的。
 
 ## 2.4 重载模板函数
+* 和函数重载一样，模板函数也可以重载
+    * 模板函数和非模板函数可以同时出现，当模板函数展开后和非模板函数展开一模一样，默认调用非模板函数（怀疑有非模板函数满足条件，是所有参数都满足，是否还需要展开模板函数）
+    * 我们也可以指定我们函数必须使用模板函数展开，比如max<>(1,2)
+        
+    ```
+    #include "iostream"
+    using namespace std;
+
+
+    int max(int a,int b){
+        cout<<"no template..."<<endl;
+        return a>b?a:b;
+    }
+
+    template <typename T1>
+    T1 max(T1 a,T1 b){
+        return a>b?a:b;
+    }
+
+
+    template <typename T1>
+    T1 max(T1 a,T1 b,T1 c){
+        return a>::max(b,c)?a:(::max(b,c));
+    }
+
+    int main(){
+        int a=0;
+        int b=1;
+        cout <<::max(1,2)<<endl;
+        cout<<::max(1.0,2.0,3.0)<<endl;
+        return 0;
+    }
+    ```
+
 
