--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -77,5 +77,17 @@ sys_open()中实现挂接。
 ![2019-08-21-14-24-59.png](./images/2019-08-21-14-24-59.png)
 
 ### 3.3.1 获取目录文件i节点
+#### 3.3.1.1 进入open_namei()
 * 进入open_namei()函数后，先对用户所要打开文件设置参数mode、flag，执行代码如下。
+![2019-08-23-08-59-57.png](./images/2019-08-23-08-59-57.png)
+![2019-08-23-09-00-12.png](./images/2019-08-23-09-00-12.png)
+![2019-08-23-09-10-07.png](./images/2019-08-23-09-10-07.png)
+![2019-08-23-09-10-25.png](./images/2019-08-23-09-10-25.png)
+![2019-08-23-09-10-46.png](./images/2019-08-23-09-10-46.png)
 
+* dir_namei()函数分析用户给出路径，获取最后一个目录文件的i节点（树梢i节点）
+
+#### 3.3.1.2 open_namei()->dir_namei()
+* 上面get_dir()函数主要是为了获取树梢i节点
+* 下面的通过指向路径的字符串指针，获取文件名和文件名长度
+![2019-08-23-09-18-36.png](./images/2019-08-23-09-18-36.png)
