--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -91,3 +91,19 @@ sys_open()中实现挂接。
 * 上面get_dir()函数主要是为了获取树梢i节点
 * 下面的通过指向路径的字符串指针，获取文件名和文件名长度
 ![2019-08-23-09-18-36.png](./images/2019-08-23-09-18-36.png)
+
+#### 3.3.1.3 open_name()->dir_namei()->get_dir()
+get_dir()函数之前描述过，原理是不断通过i节点找到目录项，再通过目录项获取i节点过程。
+* find_entry()获取目录项
+* iget() 通过目录项获取i节点
+![2019-08-23-09-51-32.png](./images/2019-08-23-09-51-32.png)
+![2019-08-23-09-51-52.png](./images/2019-08-23-09-51-52.png)
+![2019-08-23-09-52-20.png](./images/2019-08-23-09-52-20.png)
+
+#### 3.3.1.4 open_name()->dir_namei()->get_dir()->find_entry()
+find_entry()首先通过目录文件i节点确定目录文件中有多少个i节点，确定目录文件中有多少个目录项，之后从目录文件第一个逻辑块开始，不断将该文件逻辑块内容读到缓冲区，并从中查找指定的目录项，直到找到为止。
+
+![2019-08-23-11-27-08.png](./images/2019-08-23-11-27-08.png)
+![2019-08-23-11-27-25.png](./images/2019-08-23-11-27-25.png)
+![2019-08-23-11-27-47.png](./images/2019-08-23-11-27-47.png)
+![2019-08-23-11-27-58.png](./images/2019-08-23-11-27-58.png)
