--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -107,3 +107,44 @@ find_entry()首先通过目录文件i节点确定目录文件中有多少个i节
 ![2019-08-23-11-27-25.png](./images/2019-08-23-11-27-25.png)
 ![2019-08-23-11-27-47.png](./images/2019-08-23-11-27-47.png)
 ![2019-08-23-11-27-58.png](./images/2019-08-23-11-27-58.png)
+
+#### 3.3.1.5 open_name->dir_namei()->get_dir()->iget()
+iget函数是根据目录项中提供的i节点号和设备块号来获取i节点。
+* 现在inode_table[32]寻找是否有i节点，如果有就直接使用,如果找不到就加载。
+* 如果发现i节点已经装上文件系统，将该文件系统根i节点载入，这个根i节点就成为在另一个文件系统查找起点。
+
+下面代码是获取mnt的i节点（挂载的文件系统）
+![2019-08-23-11-46-06.png](./images/2019-08-23-11-46-06.png)
+![2019-08-23-11-46-19.png](./images/2019-08-23-11-46-19.png)
+
+通过read_inode()函数，从外设上（硬盘）读取i节点，载入inode_table[32]中。
+![2019-08-23-11-49-01.png](./images/2019-08-23-11-49-01.png)
+获取磁盘文件系统根i节点后，get_dir()将不断调用find_entry()函数，iget()函数，最终到到树梢i节点。
+最终函数返回到open_namei()，获取树梢i节点和文件名及长度。
+
+### 3.3.2 获取目标文件i节点
+获取文件i节点和之前获取目录文件方式基本一致，也是调用find_entry()和iget()获取目录文件i节点。
+![2019-08-23-13-43-22.png](./images/2019-08-23-13-43-22.png)
+![2019-08-23-13-43-35.png](./images/2019-08-23-13-43-35.png)
+![2019-08-23-13-43-48.png](./images/2019-08-23-13-43-48.png)
+
+这里已经获取到目标文件i节点，下面将i节点和目标file_table[64]挂接
+
+### 3.3.3 将i节点与file_table[64]挂接
+* 现在我们已经将目标文件i节点已经载入到inode_table[32]中，现在要将indoe[32]和file_table[64]挂接。
+* 此外，操作系统还对文件的属性、引用计数、读写指针偏移进行设置。
+![2019-08-23-13-54-23.png](./images/2019-08-23-13-54-23.png)
+
+到此，file_table[64]一边和filp[32]进行绑定，一边和indoe_table[32]绑定。
+建立绑定关系后，操作系统把fd返回给用户进程，fd是file_table[64]偏移量，即文件句柄。
+
+至此，打开文件结束。
+
+## 3.4 读文件
+由read完成读文件操作。read()函数映射到sys_read()中执行，在执行文件之前，先对操作可行性进行检查，包括用户传进来的文件句柄，读取文件大小，和用户进程是否有足够空间写入。如果检查都通过，再执行file_read()主体函数。
+
+```
+int size= read ( fd , buffer , sizeof(buffer ))；
+```
+
+### 3.4.1  确定数据块在外设中位置
