--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -1,4 +1,37 @@
-[toc]
+<!-- TOC -->
+
+- [1. 背景](#1-背景)
+- [2. 1号进程创建](#2-1号进程创建)
+    - [2.1 调用fork函数](#21-调用fork函数)
+    - [2.2 调用systemcal](#22-调用systemcal)
+    - [2.3 在task[64]为进程1申请空闲位置并获取进程号](#23-在task64为进程1申请空闲位置并获取进程号)
+    - [2.4 copy_process函数](#24-copy_process函数)
+        - [2.4.1 申请内存页](#241-申请内存页)
+        - [2.4.2 将进程0的taskstruct赋值给进程1，并对进程1的task_struct做个性话设置](#242-将进程0的taskstruct赋值给进程1并对进程1的task_struct做个性话设置)
+        - [2.4.3 设置进程1的分页管理](#243-设置进程1的分页管理)
+            - [2.4.3.1 在进程1的线性地址空间设置代码段和数据段](#2431-在进程1的线性地址空间设置代码段和数据段)
+            - [2.4.3.2 为进程1创建第1个页表并设置对应的目录项](#2432-为进程1创建第1个页表并设置对应的目录项)
+            - [2.4.3.3 进程1从进程0中独立](#2433-进程1从进程0中独立)
+    - [2.5 进程1共享进程0的文件](#25-进程1共享进程0的文件)
+    - [2.6 设置进程1在GDT中表项](#26-设置进程1在gdt中表项)
+    - [2.7 进程处于就绪态](#27-进程处于就绪态)
+    - [2.8 下面是一系列系统调用返回返回工作](#28-下面是一系列系统调用返回返回工作)
+- [3. 内核第一次做进程调度](#3-内核第一次做进程调度)
+- [4. 进程1的执行](#4-进程1的执行)
+    - [4.1 进程1为安装硬盘文件系统做准备](#41-进程1为安装硬盘文件系统做准备)
+        - [4.1.1 设置硬盘hard_info](#411-设置硬盘hard_info)
+        - [4.1.2 读取硬盘引导块在缓冲区](#412-读取硬盘引导块在缓冲区)
+        - [4.1.3 将缓冲区块和请求项结构挂接](#413-将缓冲区块和请求项结构挂接)
+        - [4.1.4 读硬盘](#414-读硬盘)
+        - [4.1.5 硬盘发生硬中断](#415-硬盘发生硬中断)
+        - [4.1.6 切换到进程1](#416-切换到进程1)
+    - [4.2 进程1格式化虚拟磁盘并跟换根设备的虚拟磁盘](#42-进程1格式化虚拟磁盘并跟换根设备的虚拟磁盘)
+    - [4.3 在设备上加载根文件系统](#43-在设备上加载根文件系统)
+        - [4.3.1 根设备复制到super_block[8]中](#431-根设备复制到super_block8中)
+        - [4.3.2 将根设备中的根i节点挂载在super_block[8]中根设备超级快中](#432-将根设备中的根i节点挂载在super_block8中根设备超级快中)
+        - [4.3.3 将根文件系统和进程1关联](#433-将根文件系统和进程1关联)
+
+<!-- /TOC -->
 ![03.jpg](./images/03.jpg)
 # 1. 背景
 0号进程存在主要是为了创建1号进程。
