--- a/linux kernal/基本概念/Linux 内核设计艺术/第二章 设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第二章 设备初始化和激活进程0.md
@@ -1,4 +1,21 @@
-[toc]
+<!-- TOC -->
+
+- [1.背景](#1背景)
+- [2. 根设备、硬盘](#2-根设备硬盘)
+- [3. 规划内存格局](#3-规划内存格局)
+    - [3.1 设置虚拟盘大小](#31-设置虚拟盘大小)
+    - [3.2. 设置主内存--内存管理结构mem_map初始化](#32-设置主内存--内存管理结构mem_map初始化)
+- [4. 设置中断服务](#4-设置中断服务)
+- [5. 硬件设备](#5-硬件设备)
+    - [5.1 初始化块设备请求项数据结构](#51-初始化块设备请求项数据结构)
+    - [5.2 初始化通用硬件设备](#52-初始化通用硬件设备)
+- [6. 0号进程](#6-0号进程)
+- [7. 初始化缓冲区管理结构](#7-初始化缓冲区管理结构)
+- [8. 初始化硬盘和软盘](#8-初始化硬盘和软盘)
+- [9. 开启中断](#9-开启中断)
+    - [9.1 进程从0级进程翻转到3级进程，成为真正的进程](#91-进程从0级进程翻转到3级进程成为真正的进程)
+
+<!-- /TOC -->
 ![02.jpg](./images/02.jpg)
 # 1.背景
 前面我们已经知道启动了操作系统面函数。但是距离执行用户程序还有一段距离，比如用户程序进行计算、和设备交互、人机交互。
