--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -1,4 +1,31 @@
-[toc]
+<!-- TOC -->
+
+- [1. 背景](#1-背景)
+- [2. 安装文件系统](#2-安装文件系统)
+    - [2.1 获取外设超级块](#21-获取外设超级块)
+    - [2.2 确定根文件系统挂载点](#22-确定根文件系统挂载点)
+    - [2.3 超级块和根文件系统挂接](#23-超级块和根文件系统挂接)
+- [3. 实例1--用户打开一个在硬盘中已经存在的文件，并读取文件内容](#3-实例1--用户打开一个在硬盘中已经存在的文件并读取文件内容)
+    - [3.1 打开文件](#31-打开文件)
+        - [3.1.1 filp[20],file_table[64],i节点三者之间关系](#311-filp20file_table64i节点三者之间关系)
+    - [3.2 filp[20]file_table[64]挂接](#32-filp20file_table64挂接)
+    - [3.3 获取文件i节点](#33-获取文件i节点)
+        - [3.3.1 获取目录文件i节点](#331-获取目录文件i节点)
+            - [3.3.1.1 进入open_namei()](#3311-进入open_namei)
+            - [3.3.1.2 open_namei()->dir_namei()](#3312-open_namei-dir_namei)
+            - [3.3.1.3 open_name()->dir_namei()->get_dir()](#3313-open_name-dir_namei-get_dir)
+            - [3.3.1.4 open_name()->dir_namei()->get_dir()->find_entry()](#3314-open_name-dir_namei-get_dir-find_entry)
+            - [3.3.1.5 open_name->dir_namei()->get_dir()->iget()](#3315-open_name-dir_namei-get_dir-iget)
+        - [3.3.2 获取目标文件i节点](#332-获取目标文件i节点)
+        - [3.3.3 将i节点与file_table[64]挂接](#333-将i节点与file_table64挂接)
+    - [3.4 读文件](#34-读文件)
+        - [3.4.1  确定数据块在外设中位置](#341--确定数据块在外设中位置)
+            - [3.4.1.1 file_read()->bmap()](#3411-file_read-bmap)
+            - [3.4.1.2 i节点是如何管理文件的](#3412-i节点是如何管理文件的)
+        - [3.4.2 将数据块读入缓冲块 file_read()->bread()](#342-将数据块读入缓冲块-file_read-bread)
+        - [3.4.3 将缓冲区块中的文件复制到进程空间](#343-将缓冲区块中的文件复制到进程空间)
+
+<!-- /TOC -->
 # 1. 背景
 文件系统概念和操作。
 
