--- a/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -1,5 +1,43 @@
-[toc]
 
+<!-- TOC -->
+
+- [1. 背景](#1-背景)
+- [2. 打开终端文件和赋值文件句柄](#2-打开终端文件和赋值文件句柄)
+    - [2.1 file_table[0]挂载在进程1的filp[0]中](#21-file_table0挂载在进程1的filp0中)
+    - [2.2 获取树梢节点信息（dev）](#22-获取树梢节点信息dev)
+        - [2.2.1 确定绝对路径起点](#221-确定绝对路径起点)
+            - [2.2.1.1 下面调用dir_namei()函数](#2211-下面调用dir_namei函数)
+        - [2.2.2 获取dev目录i节点](#222-获取dev目录i节点)
+        - [2.2.3 确定dev为树梢节点（topmost）](#223-确定dev为树梢节点topmost)
+    - [2.3 确定tty0的i节点](#23-确定tty0的i节点)
+    - [2.4 确定tty0是字符设备](#24-确定tty0是字符设备)
+    - [2.5 设置file_table[0]](#25-设置file_table0)
+    - [2.6 打开标准输出、标准错误输出文件](#26-打开标准输出标准错误输出文件)
+        - [2.6.1 打开标准输出文件](#261-打开标准输出文件)
+        - [2.6.2 打开标准错误输出文件](#262-打开标准错误输出文件)
+- [3. 进程1创建进程2并切换到进程2执行](#3-进程1创建进程2并切换到进程2执行)
+    - [3.1 进程1 fork进程2](#31-进程1-fork进程2)
+- [4. 加载shell程序](#4-加载shell程序)
+    - [4.1 替换标准输入文件tty0为rc文件](#41-替换标准输入文件tty0为rc文件)
+    - [4.2 加载shell程序](#42-加载shell程序)
+        - [4.2.1 检测shell文件](#421-检测shell文件)
+            - [4.2.1.1 检测i节点属性](#4211-检测i节点属性)
+            - [4.2.1.2 检测文件头属性](#4212-检测文件头属性)
+            - [4.2.1.3 检测shell文件内容信息](#4213-检测shell文件内容信息)
+    - [4.3 为执行shell文件做准备条件](#43-为执行shell文件做准备条件)
+        - [4.3.1 加载参数和环境变量](#431-加载参数和环境变量)
+        - [4.3.2 调整进程2管理结构](#432-调整进程2管理结构)
+        - [4.3.3 为执行shell调整EIP和SIP](#433-为执行shell调整eip和sip)
+    - [4.4 执行shell程序](#44-执行shell程序)
+        - [4.4.1 执行shell引导加载第一页程序](#441-执行shell引导加载第一页程序)
+        - [4.4.2映射加载物理地址和线性地址](#442映射加载物理地址和线性地址)
+- [5. 系统实现怠速](#5-系统实现怠速)
+    - [5.1 创建update进程](#51-创建update进程)
+    - [5.2 切换到shell进程继续执行](#52-切换到shell进程继续执行)
+    - [5.3 重建shell](#53-重建shell)
+- [6. 总结](#6-总结)
+
+<!-- /TOC -->
 # 1. 背景
 现在我们已经执行了进程0和进程1，本章重点介绍进程1创建进程2，进程2执行，最终shell进程开始执行，完成整个boot工作。
 
