--- a/linux kernal/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/Linux 内核设计艺术/第五章 文件操作.md
@@ -24,6 +24,25 @@
             - [3.4.1.2 i节点是如何管理文件的](#3412-i节点是如何管理文件的)
         - [3.4.2 将数据块读入缓冲块 file_read()->bread()](#342-将数据块读入缓冲块-file_read-bread)
         - [3.4.3 将缓冲区块中的文件复制到进程空间](#343-将缓冲区块中的文件复制到进程空间)
+    - [3.5 写文件](#35-写文件)
+        - [3.5.1 确定文件写入位置](#351-确定文件写入位置)
+            - [3.5.1.1 sys_write()](#3511-sys_write)
+            - [2.5.1.2 sys_write->file_write()](#2512-sys_write-file_write)
+            - [2.5.1.3 sys_write()->file_write()->create_block()](#2513-sys_write-file_write-create_block)
+        - [3.5.2 申请缓冲区块](#352-申请缓冲区块)
+        - [3.5.3 将指定数据从进程空间复制到缓冲区块](#353-将指定数据从进程空间复制到缓冲区块)
+        - [3.5.4 同步缓冲区中数据到缓存](#354-同步缓冲区中数据到缓存)
+            - [3.5.4.1 update定期同步](#3541-update定期同步)
+            - [3.5.4.2 缓冲区使用到极限，操作系统强行同步](#3542-缓冲区使用到极限操作系统强行同步)
+    - [3.6 修改文件](#36-修改文件)
+        - [3.6.1 进程重定位文件当前操作指针](#361-进程重定位文件当前操作指针)
+    - [3.7 关闭文件](#37-关闭文件)
+        - [3.7.1 filp[20]和file_table[64]解除关系](#371-filp20和file_table64解除关系)
+        - [3.7.2 文件i节点释放](#372-文件i节点释放)
+    - [3.8 删除文件](#38-删除文件)
+        - [3.8.1 对文件删除进行检查](#381-对文件删除进行检查)
+        - [3.8.2 进行具体删除操作](#382-进行具体删除操作)
+- [4. 小节](#4-小节)
 
 <!-- /TOC -->
 # 1. 背景
@@ -201,3 +220,125 @@ i节点是通过i_zone结构体来管理数据块文件。
 数据载入缓冲区后，系统要将其从缓冲区复制到指定的进程空间数据区内（*buf）
 ![2019-08-23-15-19-23.png](./images/2019-08-23-15-19-23.png)
 
+
+## 3.5 写文件
+* 进程将数据先写入缓冲区，操作系统在适当条件下将缓冲区内容同步在外设中。
+* 操作系统只以数据块为单位（1k）将缓冲区块内容同步在外设上
+* 在同步之前，缓冲区块与外设同步的数据块要一一绑定，确定外设上写入位置，以保证用户空间写入缓冲区的数据能准确的同步到指定的逻辑块中
+
+### 3.5.1 确定文件写入位置
+write()函数最终映射到sys_write()函数中去，该函数先对参数进行合法性检查，之后调用file_write()写入文件。
+
+#### 3.5.1.1 sys_write()
+![2019-08-26-09-20-20.png](./images/2019-08-26-09-20-20.png)
+![2019-08-26-09-20-33.png](./images/2019-08-26-09-20-33.png)
+#### 2.5.1.2 sys_write->file_write()
+* 先检查f_flag标志来确定写入位置，然后调用create_block创建一个与该文件对应的外设逻辑块，并返回逻辑块号
+![2019-08-26-09-31-40.png](./images/2019-08-26-09-31-40.png)
+#### 2.5.1.3 sys_write()->file_write()->create_block()
+* 创建一个新的数据块，并使之与i节点指定i_zone[9]对应。
+![2019-08-26-09-38-29.png](./images/2019-08-26-09-38-29.png)
+![2019-08-26-09-41-54.png](./images/2019-08-26-09-41-54.png)
+![2019-08-26-09-42-13.png](./images/2019-08-26-09-42-13.png)
+
+* 具体创建工作实在new_block()函数中执行
+    * 新建数据块逻辑块置1
+    * 缓冲区中为新建数据块申请缓冲区块，用于承载写入内容
+    ![2019-08-26-09-48-50.png](./images/2019-08-26-09-48-50.png)
+
+### 3.5.2 申请缓冲区块
+new_block()创建的是新缓冲区块，所以无需从外设上载入逻辑块。
+![2019-08-26-09-52-18.png](./images/2019-08-26-09-52-18.png)
+![2019-08-26-09-52-34.png](./images/2019-08-26-09-52-34.png)
+### 3.5.3 将指定数据从进程空间复制到缓冲区块
+![2019-08-26-10-01-50.png](./images/2019-08-26-10-01-50.png)
+
+### 3.5.4 同步缓冲区中数据到缓存
+同步缓冲区数据到硬盘两种方法
+    * 一个update定期同步
+    * 一个因为缓冲区使用到极限，操作系统强行同步
+#### 3.5.4.1 update定期同步
+* 之前讲述shell进程，启动了一个update进程，这个进程常驻与内存，功能是将缓冲区内容同步到外设上。该进程会调用pause()函数，将函数设置成可中断状态，每个一段时间，操作系统会唤醒update进程唤醒，并将缓冲区数据同步到外设上。
+
+* sync()最终映射到sys_sync()系统调用函数去执行。为了保证文件内容同步完整性，需要将文件i节点位图，文件i节点，文件数据块，文件数据块对应的逻辑位图全部同步到外设上。
+* sys_sync()函数先将改动过的文件i节点写入缓冲区（其余内容已经在缓冲区中）。之后遍历整个缓冲区，只要发现缓冲区中内容被改过（b_dirt置1），就将全部同步到外设上
+![2019-08-26-10-16-27.png](./images/2019-08-26-10-16-27.png)
+
+同步i节点任务是由sys_inode()函数完成
+![2019-08-26-10-24-41.png](./images/2019-08-26-10-24-41.png)
+![2019-08-26-10-30-53.png](./images/2019-08-26-10-30-53.png)
+![2019-08-26-10-31-06.png](./images/2019-08-26-10-31-06.png)
+
+同步完成后，update进程将被挂起，下一个进程被唤醒后，继续同步到缓冲区。
+
+#### 3.5.4.2 缓冲区使用到极限，操作系统强行同步
+当持续吸入很多数据时，可能update进程还没来得及同步，缓冲区就已经写满，这时需要强行同步缓冲区中数据到磁盘中。
+
+* 此任务是由getblk()完成的
+![2019-08-26-10-51-57.png](./images/2019-08-26-10-51-57.png)
+![2019-08-26-10-52-15.png](./images/2019-08-26-10-52-15.png)
+![2019-08-26-10-52-28.png](./images/2019-08-26-10-52-28.png)
+
+## 3.6 修改文件
+* 修改文件本质是在原有文件任意位置插入、删除数据。是sys_read()、sys_write()、sys_lseek()几个函数组合使用
+
+### 3.6.1 进程重定位文件当前操作指针
+进程调用lseek()函数将文件当前操作f_pos进行重新定位，最终映射到sys_lseek()函数去执行。
+![2019-08-26-11-04-25.png](./images/2019-08-26-11-04-25.png)
+
+
+## 3.7 关闭文件
+close()函数完成关闭文件，映射到sys_close()系统调用中执行.
+
+### 3.7.1 filp[20]和file_table[64]解除关系
+![2019-08-26-11-20-40.png](./images/2019-08-26-11-20-40.png)
+
+### 3.7.2 文件i节点释放
+* 文件i节点被释放过程如下:
+    * 先对i节点各类属性进行检查，如果i节点发生变化，将i节点同步到指定缓冲区块中
+    * 递减i节点i_count,使i节点计数为0，这个i节点在inode-table[32]编程空闲项
+
+
+![2019-08-26-11-30-00.png](./images/2019-08-26-11-30-00.png)
+![2019-08-26-11-30-14.png](./images/2019-08-26-11-30-14.png)
+
+## 3.8 删除文件
+* 关闭文件只是解除filp和file_table之间关系
+* 删除文件是删除磁盘中对应文件
+
+linx 0.11中允许sys_link利用系统函数sys_link将/mnt/usr/zhang/lei.c 路径名指向/mnt/user/hello.txt的文件。i节点中利用i_links字段标识有多少个路径名（目录项）链接到一个文件。每建立一个文件链接,i_nlinks就+1.
+
+### 3.8.1 对文件删除进行检查
+unlink()函数最终映射到sys_unlink()系统调用中执行，先获取hello.txt文件i节点，之后检查i节点属性，当前进程对文件的操作权限信息，确定是否有权限删除删除该文件。
+
+![2019-08-26-11-48-31.png](./images/2019-08-26-11-48-31.png)
+![2019-08-26-11-48-45.png](./images/2019-08-26-11-48-45.png)
+![2019-08-26-11-49-02.png](./images/2019-08-26-11-49-02.png)
+
+### 3.8.2 进行具体删除操作
+![2019-08-26-11-53-40.png](./images/2019-08-26-11-53-40.png)
+![2019-08-26-11-53-50.png](./images/2019-08-26-11-53-50.png)
+
+iput（）函数中执行情景如下，和之前有点区别
+![2019-08-26-11-54-38.png](./images/2019-08-26-11-54-38.png)
+
+* 调用 truncate()函数,根据文件 i 节点中 i_zone[9 ]释放文件在外设上的所有逻辑块。
+![2019-08-26-11-55-10.png](./images/2019-08-26-11-55-10.png)
+![2019-08-26-11-55-22.png](./images/2019-08-26-11-55-22.png)
+
+* 调用 freeinode( )函数,清空 i 节点位图和 i 节点表项。
+![2019-08-26-11-55-59.png](./images/2019-08-26-11-55-59.png)
+
+操作系统将被清空的 i 节点位图、逻辑块位图、 1 节点表项信息,同步到硬盘上(并未清除对应的逻辑块中的内容)。它们都是 hello.txt 文件的管理信息,这些信息不存在了,即便该
+文件的逻辑块内容还存储在硬盘上,也无桂再访问到该文件。
+
+# 4. 小节
+操作系统对文件的一切操作,都可以分为两个方面:对 super_block 、 d_super_block 、
+m_inode 、 d in ode 、 i 节点位图、逻辑块位图这类文件管理信息的操作以及对文件数据内容的
+操作。新建、打开、关闭、删除文件属于对文件管理信息的操作。读文件、写文件和修改文
+件则主要是操作文件数据内容。
+
+操作文件管理信息就是建立或解除进程与文件的关系链条,链条的主干为 task struct 中
+的吨lp[20 ]一-file_table[64]一一inode _ table[32 ]。进程就可以沿着关系链条,依托缓冲区与
+硬盘进行数据交互。当关系链条解除后,进程则不再具备操作指定文件的能力。如果文件管
+理信息被更改,贝 IJ 操作系统要将此更改落实在硬盘上,以免失去对文件数据内容的控制。
