--- a/linux kernal/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -38,7 +38,10 @@
 - [6. 总结](#6-总结)
 
 <!-- /TOC -->
+
 # 1. 背景
+![04.jpg](./images/04.jpg)
+
 现在我们已经执行了进程0和进程1，本章重点介绍进程1创建进程2，进程2执行，最终shell进程开始执行，完成整个boot工作。
 
 # 2. 打开终端文件和赋值文件句柄
