--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
+++ b/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
@@ -6,3 +6,9 @@ git status
 但是手动捕捉不到update动作
 
 # 想通过字符串来找到标签入口，发现字符串基本上是图片，QQ是魔鬼
+
+
+# 删除更新程序（有多个）
+点击update时发现新创建的update进程，根据文件名称找到所有的更新程序
+find . -name "txupd.exe"
+然后删除就可以了
