--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
+++ b/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
@@ -12,3 +12,14 @@ git status
 点击update时发现新创建的update进程，根据文件名称找到所有的更新程序
 find . -name "txupd.exe"
 然后删除就可以了
+
+运行了一个晚上，还是被QQ检测出来了存在问题。
+
+## 替换txupd.exe 程序
+简单的替换了下txupd.exe程序。
+
+可以检测到
+
+# wine dbg 调试
+* 运行后 attach调试失败
+* 只能wine 启动调试
