--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
+++ b/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
@@ -1,4 +1,14 @@
-# 查看更新前后记录
+# 1. 背景
+兼容QQ针对qq8.9.1 版本，如果qqupdate，我们的wine可能不能兼容新版本QQ，所以我么需要让QQ禁止更新。
+虽然QQ允许让用户设置禁止更新，但是作为兼容平台层，我们希望收回用户更新软件能力。
+# 2. 设置文件权限
+* 思路:首先我们git跟踪QQ更新文件前后变动,然后将替换文件的权限设置成不允许删除或者运行程序不能执行。
+* 结果:设置成666,000,444,400等权限等级都失败
+* 原因分析：跟新前后文件太多，我们不敢设置所有文件权限（可能会程序运行不了，也可能修改用户目录），，所以可能因为设置权限的文件不对。（但是，后来我设置了txupd.exe程序为444，发现更新程序任然可以执行）
+
+# 3. 镜像回滚
+
+查看更新前后记录
 git status
 
 # 通过git diff
@@ -23,3 +33,9 @@ find . -name "txupd.exe"
 # wine dbg 调试
 * 运行后 attach调试失败
 * 只能wine 启动调试
+
+# 写一个探测程序
+探测txupd.exe程序是否存在，如果出现立马杀死
+
+* 探测程序占用资源：探测进程暂用内存6M，基本可以忽略
+* 效果是，点击更新按钮没有反应
