--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
+++ b/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
@@ -7,7 +7,18 @@
 * 原因分析：跟新前后文件太多，我们不敢设置所有文件权限（可能会程序运行不了，也可能修改用户目录），，所以可能因为设置权限的文件不对。（但是，后来我设置了txupd.exe程序为444，发现更新程序任然可以执行）
 
 # 3. 镜像回滚
-
+* 思路： diff 更新前后文件变化，更新之后将文件回滚到旧版本
+* 过程： 利用git工具手动回滚能达到禁止更新目的。但是什么时候打入切点，怎么打入切点存在问题。
+    * update 前： git commit 保存切点
+    * update 后： git checkout . & git clean -xdf 放弃所有文件修改
+    * 重启QQ发现是旧版本。
+    * 但是下面的问题，如果将打入切片的动作放在QQ生命周期中（最好是在点击update button时就打入切片）
+## 3.1 跟踪update动作
+这期间发现QQ针对太强了。
+### 3.1.1 字符串跟踪
+思路：更新按钮会有些字符串，比如“更新到最新版本”等提示，我想着能否根据字符串能找到程序入口
+过程: QQ字符传基本上集中在一个字符串文件中，通过ID标识（猜测程序通过应用应用ID显示字符串），这种解耦方式增加寻找难度。后来发现更变态事情，找着找着发现有些字符串压根没出现，后来发现QQ直接应用的是图片，所以思路行不通。
+原因：引用图片，不是引用字符串
 查看更新前后记录
 git status
 
