--- Auto-Git Commit ---

--- a/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
+++ b/linux kernal/cdos/ProcKill分析记录/QQupdate/分析过程.md
@@ -1,10 +1,31 @@
+<!-- TOC -->
+
+- [1. 背景](#1-背景)
+- [2. 修改固定文件](#2-修改固定文件)
+    - [2.1 设置文件权限](#21-设置文件权限)
+    - [2.2 替换部分dll文件](#22-替换部分dll文件)
+- [3. 镜像回滚](#3-镜像回滚)
+    - [3.1 跟踪update动作](#31-跟踪update动作)
+        - [3.1.1 字符串跟踪](#311-字符串跟踪)
+        - [3.1.2 使用wine这套工具](#312-使用wine这套工具)
+- [4. 操作txupd.exe](#4-操作txupdexe)
+    - [4.1 删除txupd.exe](#41-删除txupdexe)
+    - [4.2 替换txupd.exe](#42-替换txupdexe)
+    - [4.3 探测txupd.exe进程kill掉](#43-探测txupdexe进程kill掉)
+
+<!-- /TOC -->
 # 1. 背景
 兼容QQ针对qq8.9.1 版本，如果qqupdate，我们的wine可能不能兼容新版本QQ，所以我么需要让QQ禁止更新。
 虽然QQ允许让用户设置禁止更新，但是作为兼容平台层，我们希望收回用户更新软件能力。
-# 2. 设置文件权限
+# 2. 修改固定文件
+## 2.1 设置文件权限
 * 思路:首先我们git跟踪QQ更新文件前后变动,然后将替换文件的权限设置成不允许删除或者运行程序不能执行。
 * 结果:设置成666,000,444,400等权限等级都失败
 * 原因分析：跟新前后文件太多，我们不敢设置所有文件权限（可能会程序运行不了，也可能修改用户目录），，所以可能因为设置权限的文件不对。（但是，后来我设置了txupd.exe程序为444，发现更新程序任然可以执行）
+
+## 2.2 替换部分dll文件
+* 前后替换文件非常多，估计30多个，更让人难以接受的是很多文件名称是special（名称具有随机性），不能作为固定文件保存。
+* 另外实验diff的是8.9.1和当前最新版本（9.x.x）。如果QQ最先版本变成10.x.x，那么diff文件又可能不同，我们替换文件不完全很可能导致QQ崩溃。
 
 # 3. 镜像回滚
 * 思路： diff 更新前后文件变化，更新之后将文件回滚到旧版本
@@ -13,40 +34,37 @@
     * update 后： git checkout . & git clean -xdf 放弃所有文件修改
     * 重启QQ发现是旧版本。
     * 但是下面的问题，如果将打入切片的动作放在QQ生命周期中（最好是在点击update button时就打入切片）
+
+
 ## 3.1 跟踪update动作
-这期间发现QQ针对太强了。
+这期间发现QQ太强了。
 ### 3.1.1 字符串跟踪
 思路：更新按钮会有些字符串，比如“更新到最新版本”等提示，我想着能否根据字符串能找到程序入口
 过程: QQ字符传基本上集中在一个字符串文件中，通过ID标识（猜测程序通过应用应用ID显示字符串），这种解耦方式增加寻找难度。后来发现更变态事情，找着找着发现有些字符串压根没出现，后来发现QQ直接应用的是图片，所以思路行不通。
 原因：引用图片，不是引用字符串
-查看更新前后记录
-git status
 
-# 通过git diff
-手动git checkout 回退可以。
-但是手动捕捉不到update动作
+### 3.1.2 使用wine这套工具
+* spy++：能定位到句柄，有效的消息，但是未获取到窗口消息
+* APIMoitor: QQ Protect 程序保护，不能看QQ.exe程序信息
+* winedbg: 运行后调试不行，QQ protect程序保护。只能启动程序调试，想通过启动txupd.exe进程打断点，但是winedbg手册没发现这种功能（暂时搁置）
 
-# 想通过字符串来找到标签入口，发现字符串基本上是图片，QQ是魔鬼
+# 4. 操作txupd.exe
+发现点击update按钮更新时，会产生一个txupd.exe在线更新程序。
 
+## 4.1 删除txupd.exe 
+思路: 删除QQ.exe
+过程: find 所有txupd.exe程序，发现两处全都删除。点击update按钮，QQ不更新并且暂时正常。接着QQ proctect 检测处异常，试着kill protect 程序，qq崩溃。
+结果： protect 程序保护，失败
 
-# 删除更新程序（有多个）
-点击update时发现新创建的update进程，根据文件名称找到所有的更新程序
-find . -name "txupd.exe"
-然后删除就可以了
+## 4.2 替换txupd.exe
+思路：希望protect 程序自检测文件是否存在，试着替换txupd.exe达到通过检测目的
+过程：和上面一致
+结果： 失败（protect 程序厉害）
 
-运行了一个晚上，还是被QQ检测出来了存在问题。
-
-## 替换txupd.exe 程序
-简单的替换了下txupd.exe程序。
-
-可以检测到
-
-# wine dbg 调试
-* 运行后 attach调试失败
-* 只能wine 启动调试
-
-# 写一个探测程序
-探测txupd.exe程序是否存在，如果出现立马杀死
-
-* 探测程序占用资源：探测进程暂用内存6M，基本可以忽略
-* 效果是，点击更新按钮没有反应
+## 4.3 探测txupd.exe进程kill掉
+思路：希望protect程序只是检测文件本身是否正常，不去检测update动作是否响应
+过程：手动kill txupd.exe进程，发现QQ没有检测出问题。接着写了一个探测txupd.exe进程脚本，一旦发现txupd.exe进程，马上kill。
+结果：成功，点击更新按钮没有反应。基本达到禁止更新目的。
+影响：探测进程占用mem 6M，cpu资源基本忽略。
+改进：QQ启动时启动探测程序，QQ关闭时关闭探测程序。如果担心我们的探测进程被恶意破坏，我们可以设计我们探测进程为交替守护进程（缺点是资源耗费可能加倍）。
+ 
