--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -2,3 +2,34 @@
 * 多进程执行需要解决问题
     * 多个进程运行一个程序代码，进程之间不进行干扰（进程保护）
     * 如果让多个进程轮流执行（进程调度）
+
+# 2. 线性地址保护
+## 2.1 线性地址空间设计格局
+* 进程隔离实现：通过地址划分实现隔离。Linux 0.11将32位地址分为64个64MB的区域，每个进程一份，进程之间彼此不能重叠。
+
+* task[64]是进程管理格局基点，所有进程等级和注销都是由他管理。task[64]想好nr在GDT找到对象的项，然后找到LDT。task[64]对控制进程总量和关联GDT和LDT、TSS有着重要作用。
+
+* 能够实现进程之间的跨界访问。软件是很难实现的，因为软件的指令访问区间只能在本身64MB内。这样跨界访问就需要硬件实现（很显然CPU是最常使用的）
+
+## 2.2 段基址、段限长、GDT、LDT、特权级
+* 早起CPU只设置了段首寄存器，后面CPU为了继承也没有设置断尾寄存器，而是设置段限长来起到相同作用。如果访问地址之前先进行地址检查。
+
+### 2.2.1 跨界地址访问
+#### 2.2.1.1 一个进程非法跨到另外一个进程
+* GDT、LDT保护，GDT中没有存储每个进程CS地址，LDT（第一项空、第二项代码段、第三项数据段），因此每个进程只知道当前CS段地址，跳转也只能在当前进程空间跳转。
+* 如果希望进程见调用，只能通过进程切换实现，很显然需要使用中断。
+
+## 2.2 分页
+### 2.2.1 线性地址映射到物理地址
+
+* 前面在怠速前打开PG，线性地址通过页目录表-页表-页内地址三级映射，最终落实到物理地址。
+* 在打开PG前，已经打开PE，转入到保护模式运行。CPU的硬件默认，在保护模式下，如果没有打开PG，线性地址恒等映射到物理地址。如果打开PG，线性地址需要经过MMU解析，以页目录表，页表，页面三级映射模式映射到物理地址。
+
+* linux-0.11线性地址空间是4G，而实际物理地址是16M，显然PG模式是为了实现虚拟地址。
+![2019-08-28-15-13-11.png](./images/2019-08-28-15-13-11.png)
+
+
+
+
+
+
