--- Auto-Git Commit ---

--- a/linux kernal/汇编基本概念.md/常用汇编指令.md
+++ b/linux kernal/汇编基本概念.md/常用汇编指令.md
@@ -18,6 +18,9 @@
 * REPZ（为零时重复
 * REPNZ（不为零时重复）
 ![2019-08-12-15-42-37.png](./images/2019-08-12-15-42-37.png)
+## 2.1 设置si、di方向
+* CLD（cleardirection）清除方向标志，cld即告诉程序si，di向前移动
+* STD 指令为设置方向，告诉程序si，di向后移动
 
 
 # 3.跳转指令(jmp)
