--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -27,9 +27,121 @@
 
 * linux-0.11线性地址空间是4G，而实际物理地址是16M，显然PG模式是为了实现虚拟地址。
 ![2019-08-28-15-13-11.png](./images/2019-08-28-15-13-11.png)
+    * linux-0.11只有一个页目录表，页目录表首地址存放在CR3寄存器中，显然打开PG模式首先是将页目录表首地址加载到CR3寄存器中
+![2019-08-28-15-15-15.png](./images/2019-08-28-15-15-15.png)
+
+### 2.2.2 进程执行时分页
+
+* 分页以及映射到物理页时，内核需要做到一下几点
+    * 必须要从空闲页中分配页面，不能分配其它进程正在使用页面
+    * 不能挪用内核区页面
+
+怠速前，内核通过mem_map 对1M以上内存进行分页管理，主内存每个页面引用计数都被初始化为0，默认空闲页。
+![2019-08-28-15-53-19.png](./images/2019-08-28-15-53-19.png)
+
+* 在为进程分配页面时，只能在mem_map管理范围上区申请空闲页面（为0），申请之后记为1.
+![2019-08-28-16-01-52.png](./images/2019-08-28-16-01-52.png)
+
+![2019-08-28-16-05-22.png](./images/2019-08-28-16-05-22.png)
+![2019-08-28-16-05-37.png](./images/2019-08-28-16-05-37.png)
+![2019-08-28-16-05-50.png](./images/2019-08-28-16-05-50.png)
+![2019-08-28-16-06-02.png](./images/2019-08-28-16-06-02.png)
+
+### 2.2.3 什么时候为进程申请新的页面
+* 下面中没有看到页面替换思想，如果缺页，就直接申请页面，没有考虑替换已有一面
+
+* 每个页目录项、页表项最后3为标志着其所管页面属性，分别表示U/S、R/W、和P。判断该页是否申请页面，是在解析线性地址时确定的，关键是看P标志位。
+    * 如果P标志为1，说明该页表项已经和物理页面建立关系，直接取得线性地址就行
+    * 如果P标志为0，说明没有物理页面对应，此时就产生缺页中断
+![2019-08-29-09-44-23.png](./images/2019-08-29-09-44-23.png)
+![2019-08-29-09-44-40.png](./images/2019-08-29-09-44-40.png)
+
+* 7的二进制形式是111，P被设置成1
+创建页面时，会调用页面，只要调用get_free_page()函数，把内存清0。
+![2019-08-29-09-47-49.png](./images/2019-08-29-09-47-49.png)
+
+复制页表时，就得建立映射关系，关系建立之后，就把P设置成1.
+![2019-08-29-09-54-52.png](./images/2019-08-29-09-54-52.png)
+
+页表和页面的关系解除后 ,页表项就要 清零。页目录项和页表解除关系后,页目录项也
+要请零,这样就等于把对应的页表项、页目录项的 P 清零了。
+![2019-08-29-09-56-56.png](./images/2019-08-29-09-56-56.png)
+![2019-08-29-09-57-11.png](./images/2019-08-29-09-57-11.png)
+
+比如在进程加载程序阶段,就调用了 free_page_tables( )函数把对应的页表项、页目录项
+的 P 清零了,这样,当前进程线性地址对应的页面不存在,进程开始执行程序时,必产生缺
+页中断。
+进程加载程序后,与新页面建立了映射关系, P 位被设置成 1 ,代码如下:
+![2019-08-29-10-11-01.png](./images/2019-08-29-10-11-01.png)
+
+
+### 2.2.4 为进程申请的页面要映射到线性地址空间
+* 页目录表2014项、每个页表1024项，一页4Kb，所有地址空间是1024*1024*4K=4G
+* 将地址空间分成64等分，每个进程占用16个页目录项，正好等分，所以进程空间会分页在不同的物理页面上
+* 不同的地址空间运行映射到同一个物理页面上
 
 
 
+## 2.3 共享页面
+正常情况下，不能进程划分不同页面，但是有些情况需要进程之间共享页面，比如父子进程之间的继承关系，如何实现页面共享呢？
+
+* 此时最好的选择是，子进程创建完毕后沿用父进程代码，父进程有多少页面，子进程就共享多少，将来子进程加载自身程序，再进行映射。
+* 这样的问题是，多进程操作一个页面，对进程独立性造成破坏。Linux 0.11中页表中U/S、R/W两个标志位能解决这个问题
+### 2.3.1 U/S位
+目的是组织内核才能访问的页面被用户进程访问
+* U/S位0，表示特权级为3进程不可以访问该页面，其它进程可以
+* U/S为1，所有进程都可以访问页面
+
+怠速进程为内核分页时，U/S位为1
+![2019-08-29-10-51-09.png](./images/2019-08-29-10-51-09.png)
+![2019-08-29-10-51-20.png](./images/2019-08-29-10-51-20.png)
+
+在创建子进程时，子进程页目录项和页表项U/S位都被设置成1.
+![2019-08-29-10-55-08.png](./images/2019-08-29-10-55-08.png)
+
+进程执行时，为进程新申请页面，并把页面映射到线性地址空间。申请的页目录项和页表项的U/S位都会设置成1.
+![2019-08-29-11-01-16.png](./images/2019-08-29-11-01-16.png)
+
+
+### 2.3.2 R/W位
+R/W为0说明只能读不能写，R/W为1说明可读可写。
+进程是可以共享页面的，这样会带来一些问题，如果多个进程往一个页面写数据，那么数据会造成混乱。R/W就是提供读写保护。
+创建进程时，父子进程共享页面，这些共享页面就不能写入数据，R/W就设置为0.
+![2019-08-29-11-15-14.png](./images/2019-08-29-11-15-14.png)
+
+没有父子关系的两个进程也可以共享页面，这时候也需要将R/W置为0
+![2019-08-29-11-18-12.png](./images/2019-08-29-11-18-12.png)
+![2019-08-29-11-18-24.png](./images/2019-08-29-11-18-24.png)
+
+上面我们知道，多个进程共享页面时，设置成自读无所谓，关键是如何实现写。Linux 0.11采用一套写时复制的策略来解决，即要把写入数据页面再复制一份给进程，两个进程各一个，这样就不会造成混乱，具体在下面讲解。
+
+Linux中也有在通过管道在一个页面中又读又写，这在进程之间通信讲解（但是不属于内存共享的内容了）。
+
+
+## 3.4 内核分页
+内核区数据段和代码段大小都是16MB，需要四个页目录项来管理页表。
+![2019-08-29-11-27-34.png](./images/2019-08-29-11-27-34.png)
+![2019-08-29-12-26-46.png](./images/2019-08-29-12-26-46.png)
+
+* 内核程序逻辑地址从0开始，刚好内核页的其实地址是从0开始，这样内核线性地址和物理地址是相等的，这样内核可以对内存中任意进程所有内存区域进行访问。
+
+* 内核空间的线性地址和用户空间线性地址不一样。内核不能直接使用线性地址访问任意进程的任意地址空间。但是内核可以权限调用程序访问任意进程的数据。
+
+* 内核肯定是能访问LDT等用户空间所有数据，但不是因为内核跨越了线性地址段。基本上都是通过寄存器+汇编形式完成。
+
+
+# 4. 一个进程从创建到退出的完整过程
+## 4.1 创建str1进程
+* 假设有一个程序叫str1，并且在shell中执行
+### 4.1.1 为创建str1准备条件
+* shell调用fork开始创建进程
+* 产生int0x80软中断，最终映射到sys_fork()上
+* 调用find_empty_process()为str1程序申请一个可用的进程号，在task[64]申请一个空闲位置（进程号可能和task_struct索引号不一致，因为进程号是last_pid+1,而task_struct是寻找空闲位置）
+
+后面将根据task_struct的项号确定str1处于什么64M地址空间，LDT和TSS将和GDT哪两项挂载。
+
+### 4.1.2 为str2进程管理结构寻找存储空间
+* copy_process()函数第一件事情就是为str1申请一个页面，这个页面用来承载task_struct和内核栈。
 
 
 
