--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -136,12 +136,23 @@ Linux中也有在通过管道在一个页面中又读又写，这在进程之间
 ### 4.1.1 为创建str1准备条件
 * shell调用fork开始创建进程
 * 产生int0x80软中断，最终映射到sys_fork()上
-* 调用find_empty_process()为str1程序申请一个可用的进程号，在task[64]申请一个空闲位置（进程号可能和task_struct索引号不一致，因为进程号是last_pid+1,而task_struct是寻找空闲位置）
+* 调用find_empty_process()为str1程序申请一个可用的进程号，在task[64]申请一个空闲位置（进程号可能和task索引号不一致，因为进程号是last_pid+1,而task[64]是寻找空闲位置）
 
 后面将根据task_struct的项号确定str1处于什么64M地址空间，LDT和TSS将和GDT哪两项挂载。
 
 ### 4.1.2 为str2进程管理结构寻找存储空间
 * copy_process()函数第一件事情就是为str1申请一个页面，这个页面用来承载task_struct和内核栈。
+    * 每个进程都有一个task_struct,每个进程都有这样一本帐，以保证进程之间互相独立不干扰。
+    * 进程转入内核后，执行代码都是内核代码。但是执行路径未必相同，因此压栈出栈顺序不同，所有内核为每个进程都设置一个内核栈。
+
+* 从内核分页过程已知，所有页面在刚进入PE保护模式时，就已经映射到16M线性地址空间。在内核调用get_free_page()为task_struct和进程内核栈分配的页面是在内核中分配的页。因此这个页面只能内核代码访问。
+
+* task[64]存放了task_struct地址，因此我们可以根据进程号，找到进程有关信息。
+
+### 4.1.3 Shell进程给str1进程复制task_struct结构
+* Linux0.11设计来看，整个操作系统只有进程，内核是进程延续。
+* 任何时候都要有一个进程工作，current永远指向当前进程。同时创建进程工作也由当前进程完成。
+* shell给str1进程创建task_struct本质上是将自身的task_struct复制给str1
 
 
 
