--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -153,6 +153,52 @@ Linux中也有在通过管道在一个页面中又读又写，这在进程之间
 * Linux0.11设计来看，整个操作系统只有进程，内核是进程延续。
 * 任何时候都要有一个进程工作，current永远指向当前进程。同时创建进程工作也由当前进程完成。
 * shell给str1进程创建task_struct本质上是将自身的task_struct复制给str1
+![2019-08-29-15-55-15.png](./images/2019-08-29-15-55-15.png)
+* 由于每个进程task_struct中的数据信息是不一致的，所以还要对str1的task_struct进行初始化设置。
+* 进行初始化设置时首先要将进程设置成不可中断状态（因为如果设置成可中断的，初始化未完成，再次切换到该进程，该进程可能运行故障）（设置见上面代码）
+
+### 4.1.4 个性化设置task_struct
+task_struct结构中还有其它字段需要个性化设置。
+* str1进程号、父进程号和shell进程的值都不一样
+* 时间片：shell进程已经执行过一段时间，时间片可能减少。str1不能继承shell时间片，而是根据shell优先级确定时间片。如果优先级没有被指定过，就和原始值一致即15
+![2019-08-29-16-10-18.png](./images/2019-08-29-16-10-18.png)
+
+* 对信号进行设置:task_struct关于信号有3个字段，signal、sigaction[32]、blocked，分别标识信号位图，信号处理函数挂接点和信号屏蔽码。
+    * 创建str1进程，只是把signal清0。首先不能使用父进程shell信号位图。str1如果执行到内核，返回之前要进行信号处理，如果使用shell进程的信号位图，可能会多很多不必要的信号处理。
+    * 我们将信号位清0，就没有必要设置信号处理函数挂载点和信号屏蔽码
+
+*TSS字段设置
+    * 进程切换寄存器值都是保存在TSS中
+    ![2019-08-29-16-27-10.png](./images/2019-08-29-16-27-10.png)
+    ![2019-08-29-16-27-25.png](./images/2019-08-29-16-27-25.png)
+
+    * 这些值设置是CPU自动完成的，我们在内核中找不到给寄存器赋值代码。CPU是怎么知道那个值赋值给那个寄存器？只有一种可能，就是TSS字段设置都是事先规定好的。
+
+
+### 4.1.5 复制task_struct页表并设置对应的页目录项
+现在调用copy_mem为进程分段，确定线性地址空间。确定线性地址空间，关键在于确定段基址和段限长。
+![2019-08-29-16-39-28.png](./images/2019-08-29-16-39-28.png)
+* 上面代码中设置了段基址，但没有设置段限长。因为段限长是设置在LDT中的，复制task_struct时，已经将LDT复制过来。
+
+下面开始分页，分页建立在分段的基础之上，表现在分段时间段基址和段限长为分页分别确定了从哪开始复制页表信息，复制到那里去和复制多少的问题。
+
+* 上面代码中copy_page_tables就是分页过程。但是此时str1进程并没有自己程序，复制页面表现在复制父进程页表项内容，指向父进程相同的页表内容。
+![2019-08-29-16-52-15.png](./images/2019-08-29-16-52-15.png)
+
+    * 为新进程创建页表时，还需要调用get_free_page()函数申请页面，上面的复制页表体现在复制页表项。
+    * str1申请的页面本质上是页表项（归内核管）。str1不能访问。
+
+* 分段分页完成之后还有文件继承问题，shell打开的文件，子进程全部继承。表现为文件引用计数和i节点引用计数加1.
+![2019-08-29-17-28-39.png](./images/2019-08-29-17-28-39.png)
+
+### 4.1.6 建立str1进程和全局描述符（GDT）关联
+* 文件继承好之后，将str1进程TSS、LDT挂接在GDT指定位置处
+![2019-08-29-17-33-02.png](./images/2019-08-29-17-33-02.png)
+
+### 4.1.7 将str1进程设置为就绪态
+创建进程1工作基本结束，将其设置为就绪态，就可以参与轮转。
+![2019-08-29-17-35-44.png](./images/2019-08-29-17-35-44.png)
+
 
 
 
