--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -199,6 +199,26 @@ task_struct结构中还有其它字段需要个性化设置。
 创建进程1工作基本结束，将其设置为就绪态，就可以参与轮转。
 ![2019-08-29-17-35-44.png](./images/2019-08-29-17-35-44.png)
 
+## 4.2 str1 加载进程的准备工作
+### 4.2.1 为用户进程加载做准备
+* 加载str1的准备工作和加载shell进程的准备工作非常接近
+* 进入do_execve函数先做好外围工作
+    * 管理str1进程参数和环境变量所占用页面做准备
+    * 还需要将str1程序所在的i节点找出来，通过检测i节点信息，检测文件自身是否有问题。
+    * 通过i节点找到头文件，检测文件的代码长度、数据长度，能不能容纳在64MB的线性地址空间内
+
+![2019-08-30-09-15-58.png](./images/2019-08-30-09-15-58.png)
+
+* str1继承了shell进程的一些信号字段，在加载自己程序之前，需要先将这些信号字段清0.
+![2019-08-30-09-22-34.png](./images/2019-08-30-09-22-34.png)
+
+
+### 4.2.2 释放str1进程页表
+str1 进程和shell进程共享页表，在加载时需要解除这些关系。
+![2019-08-30-09-26-18.png](./images/2019-08-30-09-26-18.png)
+![2019-08-30-09-28-05.png](./images/2019-08-30-09-28-05.png)
+
+
 
 
 
