--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -218,6 +218,59 @@ str1 进程和shell进程共享页表，在加载时需要解除这些关系。
 ![2019-08-30-09-26-18.png](./images/2019-08-30-09-26-18.png)
 ![2019-08-30-09-28-05.png](./images/2019-08-30-09-28-05.png)
 
+* str1 和shell进程对共享页面都是只读的，同时解除的是str1进程和共享页面之间关系，不会影响shell进程的运行。这里会在写时复制技术讲解。
+
+### 4.2.3 重新设置程序段和代码段
+str1加载自身程序，需要重新设置LDT。
+![2019-08-30-09-36-51.png](./images/2019-08-30-09-36-51.png)
+
+### 4.2.4 调整str1进程的task_struct 
+对str1进程task_struct 中的brk、start_stack等信息进行设置，设置这些字段是为了避免进程在执行时发生错误，本质上是管理，不是保护。
+![2019-08-30-09-49-12.png](./images/2019-08-30-09-49-12.png)
+
+最后调整EIP、ESP使软中断返回，直接中str1程序位置开始执行。前面我们已经介绍过，str1进程与shell进程解除了页面共享关系，控制页面的页已经释放，断绝了与str1进程页目录项的映射关系。这意味这页目录项为0，p位也为0，str1程序一开始执行，MMU线性解析地址就发现页目录P位为0，就产生缺页中断。
+
+## 4.3 str1程序运行和加载
+### 4.3.1 产生缺页中断并有操作系统响应
+缺页中断信号产生后，page_fault这个程序将对此响应，并最终在_page_fault中通过call _do_no_page 调用缺页中断来处理程序。
+
+* do_no_page程序执行前会先做两个方面检查，如果两个都不成立，就去硬盘中加载程序
+    * 程序是否已经加载进来或者产生缺页中断的地址是否超过了程序代码的末端
+    * 是否可能与某个现有进程共享代码（同一份程序运行两次）
+![2019-08-30-10-46-35.png](./images/2019-08-30-10-46-35.png)
+
+现在状况是先需要在内存中申请页面，然后加载str1程序。
+
+### 4.3.2 为str1申请一个内存页面
+在主内存中申请一个空闲页面，将str1程序最起始部分载入。
+* 申请的页面需要在内核数据区中mem_map中登记
+* 内核分配页面后保持与页面关系。因为内核还需要在后续访问这个页面。
+
+### 4.3.3 将str1程序加载在新分配的页面中
+* 一次加载4K
+![2019-08-30-10-55-08.png](./images/2019-08-30-10-55-08.png)
+![2019-08-30-10-55-18.png](./images/2019-08-30-10-55-18.png)
+
+### 4.3.4 将str1程序的物理内存地址与str1进程的线性空间地址对应
+![2019-08-30-11-00-03.png](./images/2019-08-30-11-00-03.png)
+
+
+### 4.3.5 不断通过缺页中断加载str1程序的全部内容
+* 在执行过成中，如果需要新的页面，就会产生缺页中断不断加载程序。
+至此，str1程序的加载完毕
+
+### 4.3.6 str1程序运行
+这部分开始运行程序，和具体程序怎么写的代码有关
+
+* 需要注意的是，程序在退出时需要清栈。但清栈过程中不会立马回收页面。清栈后可能有很多页面没有被释放
+
+## 4.4 str1进程退出
+内容包括如下
+* 进程占用的内存空间 如何释放
+* task_struct 占用空间如何处理
+* str1退出主要通过exit函数实现
+
+### 4.4.1 str1进程准备退出
 
 
 
