--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
+++ b/linux kernal/Linux 内核设计艺术/第六章 用户进程与内存管理.md
@@ -270,7 +270,30 @@ str1加载自身程序，需要重新设置LDT。
 * task_struct 占用空间如何处理
 * str1退出主要通过exit函数实现
 
+进程退出主要包含两方面内容、
+* 释放str1进程数据和代码占用的物理内存，并接触和str1可执行文件之间关系.这件事由str1进程自己解决。
+* 释放str1进程管理结构task_struct所占用的物理内存，并接触和task[64]关系，这个由父进程shell完成
+
 ### 4.4.1 str1进程准备退出
+str1调用exit()函数退出，映射到sys_exit(),并调用do_exit()函数来处理str1（）进程退出的相关事物。
+![2019-08-30-11-21-01.png](./images/2019-08-30-11-21-01.png)
+
+### 4.4.2 释放str1代码和数据所占用的内存
+* do_exit()函数执行后，调用free_page_table()函数将str1程序占用的页面释放掉。并清楚管理这些页面的页表和页目录项。这些页面中任然保留str1进程的垃圾数据，但是清楚页目录项和页表项，str1进程找不到这些页面。
+![2019-08-30-11-30-18.png](./images/2019-08-30-11-30-18.png)
+
+### 4.4.3 解除str1与文件有关内容，并给父进程发送信号。
+* 父进程一旦fork子进程，就变成可中断状态，不参与时间片轮转。
+str1解除和文件关系，表现为现将和父进程共享的文件释放掉，然后内核str1进程设置为僵死进程。并给它的父进程shell发送“子进程退出”信号。
+![2019-08-30-11-45-10.png](./images/2019-08-30-11-45-10.png)
+![2019-08-30-11-45-25.png](./images/2019-08-30-11-45-25.png)
+
+### 4.4.4 str1退出后执行进程调度
+到此为止，str1进程对退出善后工作完毕。
+![2019-08-30-11-47-50.png](./images/2019-08-30-11-47-50.png)
+
+* shell收到str1进程的信号被唤醒、
+* shell进程进入内核后释放str1 task_struct所占用的内存。并解除str1和task[64]之间关系。str1在task[64]中位置会被后续进程占用，该进程和str1的线性地址空间和页目录项是一样的。
 
 
 
