--- Auto-Git Commit ---

--- a/linux kernal/汇编基本概念.md/常用汇编指令.md
+++ b/linux kernal/汇编基本概念.md/常用汇编指令.md
@@ -21,6 +21,8 @@
 ## 2.1 设置si、di方向
 * CLD（cleardirection）清除方向标志，cld即告诉程序si，di向前移动
 * STD 指令为设置方向，告诉程序si，di向后移动
+## 2.2 设置数据源为eax（取代si）
+STOSL指令相当于将EAX中的值保存到ES:EDI指向的地址中，若设置了EFLAGS中的方向位置位(即在STOSL指令前使用STD指令)则EDI自减4，否则(使用CLD指令)EDI自增4；
 
 
 # 3.跳转指令(jmp)
