--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
+++ b/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
@@ -22,3 +22,24 @@
     * request主要负责缓冲区和设备数据交互，确保正确交互前提下，及时的将设备数据同步到缓冲区中
 
 ![2019-09-02-09-24-53.png](./images/2019-09-02-09-24-53.png)
+下面主要内容是讲解上面两个结构体。
+
+# 4. b_dev、b_blocknr、request作用
+b_dev、b_blocknr两个字段是buffer_head结构中非常重要的两个字段，是缓冲区支持多进程文件基础。
+* 确定正确性和经过能让缓冲区停留在内存基础。
+
+## 4.1 保证数据进程和缓冲区交互正确性
+* 进程和缓冲区交互不是以文件为单位，而是块为单位。一次交互不足一个块，任然占用一个缓冲块。
+
+### 4.1.1 b_dev、b_blocknr（进程到缓冲区）
+* 缓冲区块大小和硬盘块大小一致。保证数据交互正确性，首先是磁盘数据块和缓冲区中数据块严格对应。
+* 因为磁盘设备号和块号能唯一确定一个磁盘块。同时每一个缓冲区块都有一个buffer_head管理。内核通过缓冲区块buffer_blocknr和b_dev两个字段，把缓冲区和硬盘数据块绑定。确保数据交互的唯一性。
+
+![2019-09-02-09-51-30.png](./images/2019-09-02-09-51-30.png)
+
+文件读写都是通过设备号和块号到缓冲区为止。
+![2019-09-02-10-10-49.png](./images/2019-09-02-10-10-49.png)
+![2019-09-02-10-11-07.png](./images/2019-09-02-10-11-07.png)
+
+### 4.1.2 request作用
+内核通过request结构保证硬盘和缓冲区之间的数据交互。
