--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
+++ b/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
@@ -1,4 +1,46 @@
+<!-- TOC -->
 
+- [1. 背景](#1-背景)
+- [2. 缓冲区作用](#2-缓冲区作用)
+- [3. 缓冲区的总体结构图](#3-缓冲区的总体结构图)
+- [4. b_dev、b_blocknr、request作用](#4-b_devb_blocknrrequest作用)
+    - [4.1 保证数据进程和缓冲区交互正确性（设备号和块号关键）](#41-保证数据进程和缓冲区交互正确性设备号和块号关键)
+        - [4.1.1 b_dev、b_blocknr（进程到缓冲区）](#411-b_devb_blocknr进程到缓冲区)
+        - [4.1.2 request作用](#412-request作用)
+    - [4.2 让数据在缓冲区中停留竟可能长的时间](#42-让数据在缓冲区中停留竟可能长的时间)
+        - [4.2.1 在缓冲区中寻找设备号和块号对应的项](#421-在缓冲区中寻找设备号和块号对应的项)
+    - [4.3 request设计思路](#43-request设计思路)
+- [5. uptodate和dirt作用](#5-uptodate和dirt作用)
+    - [5.1 b_uptodate的作用](#51-b_uptodate的作用)
+    - [5.2 b_dirt作用](#52-b_dirt作用)
+    - [5.3 读写操作在request占用空间设置](#53-读写操作在request占用空间设置)
+    - [5.4 i_uptodate、i_dirt、s_dirt作用](#54-i_uptodatei_dirts_dirt作用)
+    - [5.5 b_lock和*b_wait作用](#55-b_lock和b_wait作用)
+        - [5.5.1 初始化缓冲区块](#551-初始化缓冲区块)
+        - [5.6.2 缓冲区申请后设置b_lock为1](#562-缓冲区申请后设置b_lock为1)
+        - [5.6.3 判断缓冲区状态（b_lock和*b_wait联用）](#563-判断缓冲区状态b_lock和b_wait联用)
+        - [5.6.4 缓冲区解锁唤醒（b_lock和*b_wait联用）](#564-缓冲区解锁唤醒b_lock和b_wait联用)
+    - [5.7 i_lock,i_wait,s_lock,*s_wait](#57-i_locki_waits_locks_wait)
+    - [5.8 request其它作用](#58-request其它作用)
+    - [5.9 实例1：关于缓冲块的进程等待队列](#59-实例1关于缓冲块的进程等待队列)
+        - [5.9.1 例子场景](#591-例子场景)
+        - [5.9.2 进程A读文件后被挂起](#592-进程a读文件后被挂起)
+        - [5.9.3 进程B读取文件后被挂起](#593-进程b读取文件后被挂起)
+        - [5.9.4 进程C写文件被挂起](#594-进程c写文件被挂起)
+            - [5.9.4.1 进程C打开文件](#5941-进程c打开文件)
+            - [5.9.4.2 进程C尝试读取hello.txt文件](#5942-进程c尝试读取hellotxt文件)
+            - [5.9.4.2 进程C因为等待缓冲区解锁挂起](#5942-进程c因为等待缓冲区解锁挂起)
+        - [5.9.5 三个进程以相反的方向被唤醒](#595-三个进程以相反的方向被唤醒)
+            - [5.9.5.1 缓冲区块解锁](#5951-缓冲区块解锁)
+            - [5.9.5.2 进程Ｃ唤醒](#5952-进程ｃ唤醒)
+            - [5.9.5.3 切换到进程Ｃ并唤醒进程Ｃ内核栈挂起的进程指针指向的进程](#5953-切换到进程ｃ并唤醒进程ｃ内核栈挂起的进程指针指向的进程)
+            - [5.9.5.4 进程Ｃ的源程序指定的str1数组数据写入hello.txt对应的缓冲区块](#5954-进程ｃ的源程序指定的str1数组数据写入hellotxt对应的缓冲区块)
+            - [5.9.5.5 切换到进程Ｂ并唤醒进程Ａ](#5955-切换到进程ｂ并唤醒进程ａ)
+    - [5.10 总体来看缓冲块和请求项](#510-总体来看缓冲块和请求项)
+        - [5.10.1 获取现有缓冲区块](#5101-获取现有缓冲区块)
+        - [5.10.2 申请新的缓冲区块](#5102-申请新的缓冲区块)
+
+<!-- /TOC -->
 # 1. 背景
 * 进程、文件系统、内存之间的操作都离不开缓冲区，理解缓冲区真正作用对理解操作系统非常重要。
 
@@ -289,6 +331,69 @@ ll_rw_block()在执行过程中，缓冲块已经加锁。所以while(bh->b_lock
     * tmp存储在进程B内核中，存储的是进程A的指针。此时bh->b_wait存储的是进程B指针
     * 调用schedule切换到进程C
 ![2019-09-03-11-59-28.png](./images/2019-09-03-11-59-28.png)
+
+### 5.9.4 进程C写文件被挂起
+#### 5.9.4.1 进程C打开文件
+进程C同样操作hello.txt文件。打开文件open映射到sys_open,在file_table[64]申请一张空闲项同时和filp[20]关联。之后调用sys_open函数调用open_namei()获取hello.txt i节点。
+![2019-09-04-09-23-29.png](./images/2019-09-04-09-23-29.png)
+
+#### 5.9.4.2 进程C尝试读取hello.txt文件
+write()函数映射到sys_write(),sys_write()调用file_write()函数读取文件内容，file_write()函数调用bread()函数从硬盘上读取数据。
+![2019-09-04-09-37-54.png](./images/2019-09-04-09-37-54.png)
+
+#### 5.9.4.2 进程C因为等待缓冲区解锁挂起
+* 进程C进入bread()过程和进程B一致
+![2019-09-04-09-39-37.png](./images/2019-09-04-09-39-37.png)
+![2019-09-04-09-39-52.png](./images/2019-09-04-09-39-52.png)
+
+* 进入getblk()函数之后，由于hello.txt文件对应的数据块已经载入缓冲区，直接返回，代码如下：
+![2019-09-04-09-41-50.png](./images/2019-09-04-09-41-50.png)
+
+* 执行ll_rw_block函数，由于缓冲块已经加锁，所以进程C也将因为等待该缓冲块解锁而被系统挂起。
+![2019-09-04-09-46-42.png](./images/2019-09-04-09-46-42.png)
+![2019-09-04-09-46-56.png](./images/2019-09-04-09-46-56.png)
+
+* 接下来执行的是sleep_on(),bh->b_wait指向是进程B指针。
+    * 进程Ｃ的内核栈之中，存储的是进程Ｂ的task_struct.
+![2019-09-04-09-49-37.png](./images/2019-09-04-09-49-37.png)
+
+
+### 5.9.5 三个进程以相反的方向被唤醒
+每个进程内核栈之中都保留着上一个因为等待缓冲区解锁被挂起的进程指针。当缓冲区解锁时，操作系统可以根据每个进程中的内核栈依次唤醒之前被挂起进程。唤醒次序是后进先出。
+
+#### 5.9.5.1 缓冲区块解锁
+Ａ、Ｂ、Ｃ进程都被挂起，系统切换到其它进程区执行。当硬盘数据读取到缓冲区完毕后，硬盘产生中断，中断服务程序开始工作后，将bh缓冲区块解锁，并调用wake_up(),将bh->b_wait对应的字段唤醒。
+![2019-09-04-10-09-00.png](./images/2019-09-04-10-09-00.png)
+![2019-09-04-10-09-10.png](./images/2019-09-04-10-09-10.png)
+
+#### 5.9.5.2 进程Ｃ唤醒
+上面调用wake_up函数传入的参数是&bh->b_wait指向的是进程Ｃ的指针。所以唤醒的是进程Ｃ。
+![2019-09-04-10-11-48.png](./images/2019-09-04-10-11-48.png)
+
+#### 5.9.5.3 切换到进程Ｃ并唤醒进程Ｃ内核栈挂起的进程指针指向的进程
+前面唤醒进程Ｃ本质上就是将进程Ｃ设置为就绪态。当进行进程调度时，就切换到进程Ｃ。
+
+进程Ｃ再次执行到sleep_on函数，唤醒Ｂ进程。
+![2019-09-04-10-17-52.png](./images/2019-09-04-10-17-52.png)
+![2019-09-04-10-18-02.png](./images/2019-09-04-10-18-02.png)
+
+#### 5.9.5.4 进程Ｃ的源程序指定的str1数组数据写入hello.txt对应的缓冲区块
+![2019-09-04-10-28-01.png](./images/2019-09-04-10-28-01.png)
+
+#### 5.9.5.5 切换到进程Ｂ并唤醒进程Ａ
+这个过程和进程Ｃ唤醒后执行过程一致。
+
+## 5.10 总体来看缓冲块和请求项
+### 5.10.1 获取现有缓冲区块
+ｂ_dev和b_blocknr是缓冲区中数据停留的标志，和设备绑定。内核没有刻意的清楚这些字段，因此很快所有的缓冲块会和设备绑定，这时再申请缓冲块只能解除旧有的绑定关系。体现了让缓冲区中数据在缓冲区中停留尽可能时间。
+![2019-09-04-10-48-19.png](./images/2019-09-04-10-48-19.png)
+![2019-09-04-10-48-35.png](./images/2019-09-04-10-48-35.png)
+
+### 5.10.2 申请新的缓冲区块
+从以上代码发现，如果找不到现有的缓冲区块，就申请新的缓冲区块
+
+* 下面申请新的缓冲区块
+![2019-09-04-10-57-59.png](./images/2019-09-04-10-57-59.png)
 
 
 
