--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
+++ b/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
@@ -47,6 +47,10 @@
     - [6.3 进程A继续写引发数据块需要同步](#63-进程a继续写引发数据块需要同步)
     - [6.4 将缓冲区中数据同步到硬盘中](#64-将缓冲区中数据同步到硬盘中)
     - [6.5 进程A由于等待请求项被挂起](#65-进程a由于等待请求项被挂起)
+    - [6.6 进程B开始执行](#66-进程b开始执行)
+    - [6.7 进程B被挂起](#67-进程b被挂起)
+    - [6.8 进程C被挂起](#68-进程c被挂起)
+    - [6.9 进程A和进程C被唤醒](#69-进程a和进程c被唤醒)
 
 <!-- /TOC -->
 # 1. 背景
@@ -472,4 +476,41 @@ sync_dev函数不断同步缓冲块，留个写入操作的请求项被全部占
 ![2019-09-04-15-53-55.png](./images/2019-09-04-15-53-55.png)
 
 ## 6.5 进程A由于等待请求项被挂起
+因为空闲的写请求项没有了，但是sys_dev()函数任然会继续调用，再次进入make_request()函数后会执行下面代码，然后进程A被挂起
+![2019-09-04-16-05-43.png](./images/2019-09-04-16-05-43.png)
 
+## 6.6 进程B开始执行
+进程B开始执行，这也是一个写盘进程。系统也要给B申请缓冲区块，以便写入数据，执行代码如下
+![2019-09-04-16-08-10.png](./images/2019-09-04-16-08-10.png)
+现在缓冲块状态不相同，系统通过BADNESS(tmp)来综合分析的。
+```
+#define BADNESS (bh) ( ( (bh) ->b_dirt<< I) + (bh) ->b一lock),
+```
+由上面公式，我们通过b_dirt和b_lock将空闲页分为四个等级.BADNESS值越小，缓冲区就越使用
+* 一等:b_dirt和b_lock都为0，BADNESS值是0
+* 二等:b_dirt是0，b_lock是1，BADNESS值是1
+* 三等:b_dirt是1，b_lock是0，BADNESS值是2
+* 四等:b_dirt是1，b_lock是1，BADNESS值是3
+
+进程A将所有缓冲块请求项b_dirt设置为0，但是b_lock设置为1，因此，这时进程这能申请BADNESS为1的缓冲块，并且此时缓冲块加锁。
+
+
+## 6.7 进程B被挂起
+进程B不能立即和缓冲块交互，于是系统调用wait_on_buffer,这时会将进程B挂起。
+![2019-09-04-16-37-00.png](./images/2019-09-04-16-37-00.png)
+
+## 6.8 进程C被挂起
+进程C是读进程，并且进程C和进程B申请的是同一块缓冲块。和进程B一样，进程C也会被挂起。因为和B进程因为同一份缓存块挂起，因此B、C会形成一个进程等待队列。
+
+## 6.9 进程A和进程C被唤醒
+一段时间后，硬盘同步完成，产生中断，中断服务程序开始执行。
+![2019-09-04-16-48-54.png](./images/2019-09-04-16-48-54.png)
+
+进程是因为等待空闲请求项才被挂起的，于是wake_up(&wait_for_request),这行代码将唤醒进程A。进程B、C会形成一个等待队列，会先唤醒C。
+
+由于此时C的时间片多，系统会先唤醒进程C，进程C开始执行的第一件事情就是唤醒进程B。
+![2019-09-04-16-57-25.png](./images/2019-09-04-16-57-25.png)
+![2019-09-04-16-57-37.png](./images/2019-09-04-16-57-37.png)
+
+该缓冲块不再是空闲缓冲块了。然后在请求项中申请一个空闲缓冲块与此缓冲块绑定，并将该缓冲块再次加锁。请求项设置完毕，并不代表立马能处理该缓冲块的读盘操作，只能将“读盘”缓冲块插入到请求队列中。
+![2019-09-04-17-01-49.png](./images/2019-09-04-17-01-49.png)
