--- Auto-Git Commit ---

--- a/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
+++ b/linux kernal/Linux 内核设计艺术/第七章 缓冲区和多进程操作文件.md
@@ -51,6 +51,9 @@
     - [6.7 进程B被挂起](#67-进程b被挂起)
     - [6.8 进程C被挂起](#68-进程c被挂起)
     - [6.9 进程A和进程C被唤醒](#69-进程a和进程c被唤醒)
+    - [6.10 进程B切换到进程A执行](#610-进程b切换到进程a执行)
+    - [6.11 同步缓存块存在问题](#611-同步缓存块存在问题)
+- [7. 总结](#7-总结)
 
 <!-- /TOC -->
 # 1. 背景
@@ -514,3 +517,25 @@ sync_dev函数不断同步缓冲块，留个写入操作的请求项被全部占
 
 该缓冲块不再是空闲缓冲块了。然后在请求项中申请一个空闲缓冲块与此缓冲块绑定，并将该缓冲块再次加锁。请求项设置完毕，并不代表立马能处理该缓冲块的读盘操作，只能将“读盘”缓冲块插入到请求队列中。
 ![2019-09-04-17-01-49.png](./images/2019-09-04-17-01-49.png)
+![2019-09-04-17-02-17.png](./images/2019-09-04-17-02-17.png)
+
+将进程C挂起。
+
+## 6.10 进程B切换到进程A执行
+进程C挂起后，进程B时间片显然比进程A多。切换到进程B后，系统为进程B申请的缓冲块任然是加锁的，所以进程B要挂起，然后切换到进程A。
+
+
+当前进程A由于同步缓冲块缺少空闲请求项才被挂起，所以唤醒后系统继续同步缓存块。现在系统已经有空闲的写请求项用于写盘，所以系统将此请求项与即将同步的缓冲块绑定。并再次插入到请求队列中，之后请求项再次缺失，进程A被挂起。
+
+接下来，会一直重复以上动作，直到三个进程都完成读写操作。
+
+## 6.11 同步缓存块存在问题
+缓冲区数据设计思想是想让缓冲区数据在缓冲区中停留尽可能多的时间。同步代码设计的和这个直到思想有点偏离，代码没考虑b_count,只要b_dirt为1，都要进程同步。这样肯定增加了读写磁盘工作。
+![2019-09-04-17-17-28.png](./images/2019-09-04-17-17-28.png)
+![2019-09-04-17-17-50.png](./images/2019-09-04-17-17-50.png)
+
+# 7. 总结
+多进程操作文件的核心是多进程对缓冲区的操作。缓冲区关联着用户进程、文件系统和
+内存,所以本章是比较难的一章。
+本章详细讲解了缓冲区的作用及整体架构,全面分析了 b_dev 、 b _ blocknr, uptodate 、dirt 等的作用,并以两个实例详细讲解了进程等待队列及多进程操作文件。
+深入理解这一章的内容,对深入理解文件系统、缓冲区、多进程的运行大有益处。
